Your commit message

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   <body>
     <!-- Navbar -->
     <header class="navbar">
-  <div class="logo">intervue<span></span></div>
-
+        <div>
+  <div class="logo"><span style="color: black;">intervue.io</span></div>
+  </div>
+  <div>
   <nav class="nav-links" id="navLinks">
     <a href="#">Become an interviewer</a>
     <a href="#">Features</a>
@@ -27,6 +29,7 @@
   </nav>
 
   <div class="menu-toggle" id="menuToggle">&#9776;</div>
+  </div>
 </header>
 
 
